# bijx

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  conftest.py  pyproject.toml  setup.py  tutorial-basics.ipynb  tutorial-phi4.ipynb  tutorial.ipynb
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  requirements-docs.txt
docs/source/: api.md  conf.py  index.md  tutorials.md
docs/source/intro/: basic.ipynb  cg.ipynb  concepts.ipynb  continuous.ipynb  coupling.ipynb  flowjax.ipynb  fourier.ipynb  lie.ipynb
docs/source/tutorials/: analytic.ipynb  basics.ipynb  continuous.ipynb  coupling.ipynb  gmm-spiral.ipynb  gmm.ipynb  scalar-theory.ipynb  su3-flow.ipynb
docs/tutorials/: tutorial-basics.ipynb  tutorial-phi4.ipynb
glutils/: __init__.py  constants.py  liegrad.py  ops.py
lfx/: __init__.py  affine.py  bijections.py  conv.py  discrete.py  embeddings.py  fourier.py  prior.py  rk4ode.py  sampling.py  scalar_vf.py  scalartheory.py  sym_conv.py  utils.py
paper/: paper.bib  paper.md
src/bijx/: __init__.py  cg.py  distributions.py  flowjax.py  fourier.py  lie.py  mcmc.py  samplers.py  solvers.py  utils.py
src/bijx/bijections/: __init__.py  affine_complex.py  analytic.py  base.py  continuous.py  conv_cnf.py  coupling.py  fourier.py  linear.py  meta.py  radial.py  scalar.py  splines.py
src/bijx/cg/: integration.py  tableau.py
src/bijx/lattice/: __init__.py  gauge.py  general.py  scalar.py  scalar_vf.py
src/bijx/lie/: __init__.py
src/lfx/: __init__.py  bijections.py  conv.py  discrete.py  distributions.py  embeddings.py  flowjax.py  fourier.py  gmm.py  mcmc.py  ode.py  one_dim.py  samplers.py  sampling.py  scalar_vf.py  scalartheory.py  simple_nets.py  solvers.py  utils.py
tests/: test_bijections.py  test_bijections_advanced.py  test_bijections_radial.py  test_distributions.py  test_flowjax_bridge.py  test_fourier.py  test_integration.py  test_liegrad.py  test_neural_networks.py
(+26 files in other folders)
