[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lfx"
dynamic = ["version"]
description = "LFX Python Package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mathis Gerdes", email = "mathisgerdes@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chex>=0.1.89",
    "diffrax>=0.6.2",
    "einops>=0.8.0",
    "flax>=0.10.4",
    "jax>=0.0",
    "jaxlib>=0.5.1",
    "numpy>=2.0.2",
    "optax>=0.2.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools_scm]
write_to = "lfx/_version.py"

[tool.setuptools]
packages = ["lfx"]
